<resources>
    <string name="app_name">Animal Feed</string>
    <string name="cattle_type">Cattle Type</string>
    <string name="cattle_breed">Breed</string>
    <string name="cattle_weight">Weight</string>
    <string name="cattle_age">Age</string>
    <string name="hint_weight">in KG</string>
    <string name="hint_age">in months</string>
    <string name="goat">Goat</string>
    <string name="cow">Cow</string>
    <string name="sheep">Sheep</string>
    <string name="buffalo">Buffalo</string>
    <string-array name="cattle_type">
        <item>Goat</item>
        <item >Sheep</item>
        <item >Cow</item>
        <item>Buffalo</item>
    </string-array>
    <string-array name="goat_breeds">
        <item>Goat Breed 1</item>
        <item> Goat Breed 2</item>
    </string-array>
    <string-array name="cow_breeds">
        <item>Cow Breed 1</item>
        <item> Cow Breed 2</item>
    </string-array>
    <string-array name="Buffalo_breeds">
        <item>Buffalo Breed 1</item>
        <item> Buffalo Breed 2</item>
    </string-array>
    <string-array name="sheep_breeds">
        <item>sheep Breed 1</item>
        <item> sheep Breed 2</item>
    </string-array>
    <string-array name="buffalo_breeds">
        <item>buffalo Breed 1</item>
        <item> buffalo Breed 2</item>
    </string-array>


</resources>