<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataInputActivity">

    <TextView
        android:id="@+id/tv_cattle_type2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cattle_type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cattle_type_spinner"
        app:layout_constraintEnd_toStartOf="@+id/cattle_type_spinner"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cattle_type_spinner"
        app:layout_constraintVertical_bias="1.0" />

    <TextView

        android:id="@+id/tv_cattle_weight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/cattle_weight"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_cattle_breed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_cattle_breed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        android:minWidth="80dp"/>

    <TextView
        android:id="@+id/tv_cattle_Age"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:minWidth="80dp"
        android:text="@string/cattle_age"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_cattle_type2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_cattle_type2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        android:gravity="center"/>

    <EditText
        android:id="@+id/cattle_Age"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/hint_age"
        android:gravity="center"
        android:minWidth="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cattle_weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cattle_weight"
        app:layout_constraintTop_toBottomOf="@+id/cattle_weight"
        app:layout_constraintVertical_bias="0.037" />

    <Spinner
        android:id="@+id/cattle_breed_spinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:minWidth="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cattle_type_spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cattle_type_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <EditText
        android:id="@+id/cattle_weight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/hint_weight"
        android:gravity="center"
        android:minWidth="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cattle_type_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cattle_type_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/tv_cattle_type"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cattle_type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cattle_type_spinner"
        app:layout_constraintEnd_toStartOf="@+id/cattle_type_spinner"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cattle_type_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_cattle_breed"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:minWidth="80dp"
        android:text="@string/cattle_breed"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_cattle_type2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_cattle_type2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Spinner
        android:id="@+id/cattle_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:minWidth="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Calculate"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cattle_type_spinner"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/tv_cattle_type2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>